--- a/modules/platform/nuxeo-drive-server/nuxeo-drive-mongodb/pom.xml
+++ b/modules/platform/nuxeo-drive-server/nuxeo-drive-mongodb/pom.xml
@@ -58,7 +58,17 @@
       <groupId>org.nuxeo.ecm</groupId>
       <artifactId>nuxeo-drive-operations</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-audit-mongodb</artifactId>
+    </dependency>
     <!-- Test -->
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-audit-mongodb</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -168,10 +178,6 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-tag-core</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-audit-mongodb</artifactId>
     </dependency>
   </dependencies>
 </project>
